--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,25 @@
         <item>Chennai</item>
     </string-array>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="nav_history">History</string>
+    <string name="nav_notifications">Notifications</string>
+    <string name="nav_help">Help</string>
+    <string name="nav_settings">Settings</string>
+    <string name="nav_about_us">About Us</string>
+
+    <!-- Toolbar titles when navigation menu item is selected -->
+    <string-array name="nav_item_activity_titles">
+        <item>History</item>
+        <item>Notifications</item>
+        <item>Help</item>
+        <item>Settings</item>
+        <item>About us</item>
+    </string-array>
+    <string name="action_settings">Settings</string>
 
 </resources>
